--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -556,19 +556,23 @@ h1.best-menu-toggle:hover {
 	margin: 0;
 	position: relative;
 	float: left;
-	padding: 12px 18px 14px 18px;
+	padding: 7px 10px 10px 10px;
 	border: 1px solid transparent;
+}
+.best-main-navigation div li {
+    margin-left: 10px;
 }
 .best-main-navigation div li a {
 	padding: 0;
-	color: #CCC;
+	color: #F0F0F0;
 	font-size: 14px;
 	font-family: 'montserratregular';
 	width: 100%;
-	display: block;
+	display: inline;
 }
 .best-main-navigation div li a:hover {
-	color: #444;
+	color: #F0F0F0;
+    border-bottom: 3px solid #D6B101;
 }
 .best-main-navigation div ul ul li {
 	width: 100%;
@@ -678,8 +682,10 @@ h1.best-menu-toggle:hover {
     border-bottom: 3px solid #D6B101;
 }
 
-.menu-item a:hover {
-    border-bottom: 3px solid #D6B101;
+.menu-item {
+    border: 1px solid rgb(42, 45, 47);
+    border-radius: 2px;
+    background: rgb(42, 45, 47);
 }
 
 /*------------End-Nav-Menu-Hrader----------------*/
