--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -1740,7 +1740,7 @@ input.dnt_paypal_button {
 	}
 	.best-sidebar {
 		max-width: 30%;
-		margin: 0 0 0 -1px;
+		margin: 0;
 		padding: 0 2%;
 	}
 	.best-witget-right-sidebar {
