--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -686,6 +686,7 @@ h1.best-menu-toggle:hover {
     border: 1px solid rgb(42, 45, 47);
     border-radius: 2px;
     background: rgb(42, 45, 47);
+    box-shadow: 0 0 10px -2px rgba(0,0,0,0.75);
 }
 
 /*------------End-Nav-Menu-Hrader----------------*/
