--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -537,17 +537,14 @@ a.best-custom-img-header {
 .best-main-small-navigation .menu {
 	display: none;
 }
-h1.best-assistive-text,
-h1.best-menu-toggle {
+.best-menu-toggle {
 	display: none;
 	font-weight: bold;
 	text-transform: none;
 	color: rgb(68,68,68);
 	cursor: pointer;
 }
-h1.best-menu-toggle:hover {
-	color: #D6B101;
-}
+
 .best-main-navigation div ul {
 	margin: 0 auto;
     max-width: 1188px;
@@ -746,7 +743,7 @@ input.alignright {
 .best-witget-footer-sidebar #s {
 	width: 80%;
 	max-width: 230px;
-	background-color: #f0f0f0;
+	background-color: white;
 	cursor: text;
 	outline: 0;
 	z-index: 4;
@@ -1520,6 +1517,7 @@ caption {
 	margin: 0 auto;
 	position: relative;
     min-height: calc(100vh - 208px);
+    margin-top: 5px;
 }
 .best-contents {
 	display: block;
@@ -1760,8 +1758,18 @@ input.dnt_paypal_button {
 		margin: 0 auto;
 		padding: 0 auto;
 	}
+    .best-nav {
+        display: block;
+    }
 }
 @media screen and (max-width: 820px) {
+    .menu-item {
+        display: block!important;
+        border-bottom: 3px solid #2A2D2F;
+    }
+    #menu-main-menu {
+        padding-left: 0;
+    }
 	.best-logo {
 		float: none;
 	}
@@ -1775,7 +1783,7 @@ input.dnt_paypal_button {
 		margin: -1px auto;
 		padding: 0 auto;
 		float: none;
-		display: block;
+		display: none;
 	}
 	.best-main-small-navigation {
 		bottom: 0;
@@ -1804,11 +1812,6 @@ input.dnt_paypal_button {
 		list-style: none;
 		list-style-type: none;
 	}
-    .menu-item {
-        border: none;
-        background: none;
-        box-shadow: none;
-    }
 }
 @media screen and (max-width: 768px) {
 	#best_header {
@@ -1971,18 +1974,3 @@ input.dnt_paypal_button {
 	}
 }
 /*-----------------End-@Media-------------------*/
-
-
-.best-contents section {
-    background-color: white;
-}
-
-@media screen and (max-width: 769px) {
-    .menu-item {
-        display: block!important;
-        border-bottom: 3px solid #2A2D2F;
-    }
-    #menu-main-menu {
-        padding-left: 0;
-    }
-}
