--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -173,7 +173,7 @@ li,
 p,
 dd {
 	font-family: 'open_sansregular';
-	font-size: 15px;
+	font-size: 1.2rem;
 }
 hr {
 	color: #777;
@@ -188,7 +188,7 @@ a {
 	color: rgb(68,68,68);
 }
 a:hover{
-	color: #D6B101;
+	color: #D6A001;
 }
 h1,
 h2,
@@ -265,7 +265,7 @@ ul {
 }
 ul li {
 	margin-top: 6px;
-	margin-bottom: 6.5px;
+	margin-bottom: 6px;
 	padding-left: 10px;
 }
 ul ul,
@@ -410,7 +410,7 @@ sub {
 }
 pre {
 	white-space: -moz-pre-wrap;
-	white-space: -pre-wrap;
+	white-space: pre-wrap;
 	white-space: -o-pre-wrap;
 	white-space: pre-wrap;
 	word-wrap: break-word;
@@ -475,7 +475,7 @@ blockquote {
 	margin: 23px 0 10px 2px;
 }
 blockquote p {
-	border-left: #D6B101 5px solid;
+	border-left: #D6A001 5px solid;
 	padding: 0 0 0 19px;
 	display: table-cell;
 	font-size: 24px;
@@ -551,7 +551,7 @@ a.best-custom-img-header {
 }
 .best-main-navigation div li {
 	display: inline-block;
-	margin: 0;
+	margin: 5px 0 0 0;
 	position: relative;
     padding: 0;
 }
@@ -565,7 +565,7 @@ a.best-custom-img-header {
 }
 .best-main-navigation div li:hover {
 	color: #F0F0F0;
-    border-bottom: 3px solid #D6B101!important;
+    border-bottom: 3px solid #D6A001!important;
 }
 .best-main-navigation div li:hover {
     background: rgb(72, 81, 86);
@@ -665,14 +665,14 @@ a.best-custom-img-header {
 .best-main-navigation div .current_page_ancestor > a,
 .best-main-navigation div .current-menu-item > a,
 .best-main-navigation div .current-menu-ancestor > a {
-	color: #D6B101 !important;
+	color: #D6A001 !important;
 	padding: 0 auto;
 }
 
 .current-menu-item {
-    color: #D6B101;
+    color: #D6A001;
     background: rgb(72, 81, 86);
-	border-bottom: 3px solid #D6B101;
+	border-bottom: 3px solid #D6A001;
 }
 
 /*------------End-Nav-Menu-Hrader----------------*/
@@ -942,11 +942,11 @@ a.comment-edit-link,
 }
 .portfolio_content .read_more:hover a,
 a.more-link:hover {
-	background-color: #D6B101;
+	background-color: #D6A001;
 }
 a.comment-reply-link:hover,
 a.comment-edit-link:hover {
-	color: #D6B101;
+	color: #D6A001;
 }
 .best-nav-previous,
 .best-nav-next {
@@ -1080,7 +1080,7 @@ a.comment-edit-link:hover {
 	text-decoration: none;
 }
 .best-tags a:hover {
-	color: #D6B101;
+	color: #D6A001;
 }
 /*----------Newer-Post--Ower-Post----------*/
 .best-image-nav-prev,
@@ -1170,7 +1170,7 @@ a.comment-edit-link:hover {
 }
 .best-sidebar a:hover,
 .best-witget-right-sidebar  a:hover {
-	color: #D6B101;
+	color: #D6A001;
 }
 .recentcomments,
 .best-sidebar li,
@@ -1243,11 +1243,6 @@ a.comment-edit-link:hover {
 }
 .best-footer-logo-content-by p {
 	font-size: 14px;
-}
-.best-footer-logo-content-by a {
-	font-size: 14px;
-	color: #fff;
-	text-decoration: underline;
 }
 .best-footer-logo-content-by a:hover {
 	text-decoration: none;
@@ -1451,7 +1446,7 @@ input[type="submit"] {
 input[type="reset"]:hover,
 input[type="button"]:hover,
 input[type="submit"]:hover {
-	background: #D6B101;
+	background: #D6A001;
 }
 caption {
 	margin-bottom: 14px;
@@ -1480,7 +1475,7 @@ caption {
 #best_header {
 	display: block;
 	width: 100%;
-    background: #DBA700;
+    background: #F6B52D;
     height: 180px;
 }
 .best-head{
@@ -1662,7 +1657,7 @@ caption {
 	color: rgb(68,68,68);
 }
 .item_title a:hover {
-	color: #D6B101;
+	color: #D6A001;
 }
 .jbbrd_frontend_table_sendmail tr,
 .jbbrd_frontend_table_sendmail td {
@@ -1776,11 +1771,6 @@ input.dnt_paypal_button {
 	.best-logo {
 		float: none;
 	}
-	h1.best-menu-toggle {
-		font-size: 19px;
-		margin: 10px 0 10px 0;
-		display: block;
-	}
 	.best-nav {
 		position: static;
 		margin: -1px auto;
@@ -1800,8 +1790,11 @@ input.dnt_paypal_button {
 	}
 	h1.best-menu-toggle {
 		font-size: 19px;
-		margin: 10px 0 10px 0;
+		margin: 30px 0 20px 0;
 		display: block;
+        background: rgb(255, 251, 219);
+        width: 100px;
+        padding: 5px
 	}
 	.best-main-small-navigation div {
 		border-top: 1px solid #ccc;
@@ -1979,4 +1972,45 @@ input.dnt_paypal_button {
 
 .menu-toggle {
     display: block;
+}
+/* Accordion Styles */
+.accordion {
+    margin-bottom: 20px;
+    background: rgb(242, 242, 242);
+}
+.accordion-title {
+    background: rgb(72, 81, 86);
+    cursor: pointer;
+}
+.accordion-title h3 {
+    margin-left: 15px;
+    padding: 5px;
+    margin-top: 0;
+}
+.accordion-title:hover {
+    background: rgb(72, 81, 86);
+    color: #D6A001;
+}
+.accordion-content {
+    padding: 10px;
+}
+
+.first-item {
+    background: #9B59B6;
+}
+
+.second-item {
+    background: #597DB6;
+}
+
+.best-footer-logo-content-by .fa {
+    color: #D6A001;
+}
+
+.best-footer-logo-content-by .fa-inverse {
+    color: #2A2D2F;
+}
+
+.best-footer-logo-content-by a:hover .fa-inverse {
+    color: #485156;
 }
