--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -551,7 +551,7 @@ a.best-custom-img-header {
 }
 .best-main-navigation div li {
 	display: inline-block;
-	margin: 5px 0 0 0;
+	margin: 0;
 	position: relative;
     padding: 0;
     color: white;
@@ -578,9 +578,9 @@ a.best-custom-img-header {
     background: rgb(72, 81, 86);
 }
 .best-main-navigation div ul ul li {
+    background: #2A2D2F;
 	width: 100%;
-	max-width: 230px;
-	padding: 11px 18px 11px 17px;
+    border-bottom: 3px solid #2A2D2F;
 }
 .best-main-navigation div ul li ul ul {
 	margin: 5px auto;
@@ -591,7 +591,7 @@ a.best-custom-img-header {
 	position: absolute;
 	left: -9999px;
 	opacity: 0;
-	width: 232px;
+	width: 100%;
 	z-index:100 !important;
 	background-color: #fff;
 }
@@ -608,14 +608,13 @@ a.best-custom-img-header {
 	left: -9999px;
 }
 .best-main-navigation div ul li:hover ul {
-	left: -1px;
+	left: 0;
 	opacity: 1;
 	z-index: 101 !important;
 	float: left;
-	margin: 0 0;
-	padding: 10px 0;
+	margin: 0;
 	color: black;
-	top: 40px;
+	top: 35px;
 }
 /* TODO: this is likely now out-datred code */
 /*.ie8 .best-main-navigation div ul li:hover ul {
@@ -637,36 +636,7 @@ a.best-custom-img-header {
 	left: 229px;
 	top: 2px;
 }
-.best-main-navigation div .menu-item-has-children:hover,
-.best-main-navigation div .page_item_has_children:hover {
-	border-bottom-color: transparent;
-	border-top-right-radius: 3px;
-	border-top-left-radius: 3px;
-	border: 1px solid #CCC;
-	background: #fff;
-}
-.best-main-navigation div .menu-item-has-children:hover ul li,
-.best-main-navigation div .page_item_has_children:hover ul li {
-	border-bottom-color: transparent;
-	border-top-right-radius: 3px;
-	border-top-left-radius: 3px;
-	border: 1px solid transparent;
-	padding: auto;
-}
-.best-main-navigation div li.menu-item-has-children,
-.best-main-navigation div li.page_item_has_children {
-	padding-right: 36px;
-}
-.best-main-navigation div .menu-item-has-children,
-.best-main-navigation div .page_item_has_children  {
-	background-color: transparent;
-	background: no-repeat url(images/nav_menu_arrow_bottom.png) 84% center;
-}
-.best-main-navigation div .sub-menu .menu-item-has-children,
-.best-main-navigation div .children .page_item_has_children {
-	background-color: transparent;
-	background: no-repeat url(images/nav_menu_arrow_right.png) 92% center;
-}
+
 .best-main-navigation div .current_page_item > a,
 .best-main-navigation div .current_page_ancestor > a,
 .best-main-navigation div .current-menu-item > a,
@@ -678,7 +648,11 @@ a.best-custom-img-header {
 .current-menu-item {
     color: #F6B52D;
     background: rgb(72, 81, 86);
-	border-bottom: 3px solid #F6B52D;
+	border-bottom: 3px solid #F6B52D!important;
+}
+
+.menu-item {
+    border-bottom: 3px solid #2A2D2F;;
 }
 
 /*------------End-Nav-Menu-Hrader----------------*/
@@ -1765,6 +1739,9 @@ input.dnt_paypal_button {
     }
 }
 @media screen and (max-width: 820px) {
+    .best-main-navigation div ul ul {
+        display: none;
+    }
     .menu {
         display: none;
     }
