--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -570,7 +570,7 @@ a.best-custom-img-header {
     color: #f0f0f0;
 }
 
-.best-main-navigation div li a:hover {
+.best-main-navigation div li:hover a {
 	color: #F6B52D;
 }
 .best-main-navigation div li:hover {
@@ -1451,12 +1451,23 @@ caption {
 	padding: 0;
 	margin: 0;
 	border: 0;
-    background-image: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 500px);
 }
 #best_header {
 	display: block;
 	width: 100%;
-    background: #F6B52D;
+    height: 180px;
+    background-color: #F6B52D;
+    background-image: url(images/background-egypt-darken-fade.png);
+}
+#best_header:after {
+    content: "";
+    opacity: 0.1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
     height: 180px;
 }
 .best-head{
