--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -1722,7 +1722,7 @@ input.dnt_paypal_button {
 		padding: 0 2%;
 	}
 	.best-witget-right-sidebar {
-		margin: 30px 10px;
+		margin: 30px 0;
 	}
 	.footer,
 	.best-footer-sidebar-content {
@@ -1806,6 +1806,39 @@ input.dnt_paypal_button {
 		list-style: none;
 		list-style-type: none;
 	}
+    .content-area,
+    .best-contents {
+        max-width: 100%;
+        float: none;
+        border-right: none;
+        margin: 30px auto;
+        padding: 0 3%;
+    }
+    .best-sidebar {
+        float: none;
+        max-width: 740px;
+        width: 100%;
+        border-left: none;
+        margin: 64px auto;
+        padding: 0;
+    }
+    .best-footer-sidebar-content .best-witget-right-sidebar,
+    .best-witget-right-sidebar,
+    .best-witget-footer-sidebar,
+    .menu-menu-footer {
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 1.5% !important;
+        float: left;
+    }
+    .best-witget-right-sidebar,
+    .best-witget-footer-sidebar {
+        padding-bottom: 18px !important;
+        margin-bottom: 10px !important;
+    }
+    .best-footer-sidebar-content {
+        padding: 20px !important;
+    }
 }
 @media screen and (max-width: 768px) {
 	#best_header {
@@ -1838,14 +1871,6 @@ input.dnt_paypal_button {
 	.best-breadcrumbs-posts {
 		position: static;
 	}
-	.content-area,
-	.best-contents {
-		max-width: 100%;
-		float: none;
-		border-right: none;
-		margin: 30px auto;
-		padding: 0 3%;
-	}
 	.best-post {
 		/*border-bottom: 1px solid #777;*/
 		/*margin-bottom: 42px;*/
@@ -1856,31 +1881,6 @@ input.dnt_paypal_button {
 	.best-nav-previous,
 	.best-nav-next {
 		padding: 0;
-	}
-	.best-sidebar {
-		float: none;
-		max-width: 740px;
-		width: 100%;
-		border-left: none;
-		margin: 64px auto;
-		padding: 0;
-	}
-	.best-footer-sidebar-content .best-witget-right-sidebar,
-	.best-witget-right-sidebar,
-	.best-witget-footer-sidebar,
-	.menu-menu-footer {
-		width: 100%;
-		margin: 0 auto;
-		padding: 0 1.5% !important;
-		float: left;
-	}
-	.best-witget-right-sidebar,
-	.best-witget-footer-sidebar {
-		padding-bottom: 18px !important;
-		margin-bottom: 10px !important;
-	}
-	.best-footer-sidebar-content {
-		padding: 20px !important;
 	}
 }
 @media screen and (max-width: 640px) {
@@ -2051,4 +2051,9 @@ input.dnt_paypal_button {
 
 .best-footer-logo-content-by a:hover .fa-inverse {
     color: #F6F6F6;
+}
+
+.best-footer-extra {
+    margin: 25px 50px;
+    float: left;
 }
