--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -311,21 +311,23 @@ form {
 	margin-top: -4px;
 }
 label {
-	font-size: 16px;
+	font-size: 14px;
 	font-family: 'open_sansbold';
 }
 input[type="text"],
 input[type="password"],
 input[type="url"],
 input[type="email"] {
-	padding: 10px 10px 13px 10px;
+	padding: 5px;
 	max-width: 221px;
 	width: 100%;
-	border-radius: 5px;
+	border-radius: 2px;
 	background: #ededed;
 	margin: 3px 0 8px;
 	border: 1px solid #ccc;
 	color: #696969;
+    font-size: 14px;
+    font-family: 'open_sansregular';
 }
 textarea {
 	overflow: auto;
@@ -335,7 +337,7 @@ textarea {
 	min-width: 100px;
 	width: 500px;
 	max-width: 586px;
-	border-radius: 4px;
+	border-radius: 2px;
 	background: #ededed;
 	margin: 2px 0 0;
 	border: 1px solid #ccc;
@@ -530,7 +532,6 @@ a.best-custom-img-header {
 /*------------End-Logotip----------------*/
 /*------------Nav-Menu-Header------------------*/
 .best-main-navigation {
-	text-transform: uppercase;
 	line-height: 15px;
     margin: 0 auto;
     width: 100%;
@@ -563,7 +564,7 @@ a.best-custom-img-header {
 }
 .best-main-navigation div li a {
 	padding: 7px 10px 10px 10px;
-	font-size: 14px;
+	font-size: 16px;
 	font-family: 'montserratregular';
 	width: 100%;
 	display: block;
@@ -1418,7 +1419,7 @@ input[type="submit"] {
 	margin-top: 12px;
 	margin-right: 8px;
 	border: none;
-	border-radius: 6px;
+	border-radius: 2px;
 	padding: 12px 43px 14px 43px;
 	background: #444444;
 	color: #fff;
@@ -2056,4 +2057,8 @@ input.dnt_paypal_button {
 .best-footer-extra {
     margin: 25px 50px;
     float: left;
+}
+
+.wpcf7-form p {
+    font-size: 13px;
 }
