--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -549,6 +549,7 @@ a.best-custom-img-header {
 	text-transform: none;
 	color: rgb(68,68,68);
 	cursor: pointer;
+    margin: 120px 0 10px 15px;
 }
 
 .best-main-navigation div ul {
@@ -1790,7 +1791,6 @@ input.dnt_paypal_button {
 	}
 	h1.best-menu-toggle {
 		font-size: 19px;
-		margin: 30px 0 20px 0;
 		display: block;
         background: rgb(255, 251, 219);
         width: 100px;
