--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -530,6 +530,9 @@ a.best-custom-img-header {
 /*------------End-Logotip----------------*/
 /*------------Nav-Menu-Header------------------*/
 .best-main-navigation {
+    -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.63);
+    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.63);
 	line-height: 15px;
     margin: 0 auto;
     width: 100%;
