--- a/wp-content/themes/best-harry/style.css
+++ b/wp-content/themes/best-harry/style.css
@@ -179,8 +179,6 @@ hr {
 	height: 0;
 	border-top: 0;
 	border-style: solid;
-	margin-top: 35px;
-	margin-bottom: 36px;
 }
 a {
 	text-decoration: none;
@@ -207,7 +205,6 @@ h6 {
 }
 h1 {
 	font-size: 27px;
-	margin-top: 1.42em;
 }
 h2 {
 	font-size: 24px;
@@ -215,7 +212,6 @@ h2 {
 }
 h3 {
 	font-size: 21px;
-	margin-top: 1.1em;
 }
 h4 {
 	font-size: 18px;
@@ -223,16 +219,14 @@ h4 {
 }
 h5 {
 	font-size: 16px;
-	margin-top: 1.26em;
 }
 h6 {
 	font-size: 14px;
-	margin-top: 1.15em;
 }
 p {
 	line-height: 24px;
 	margin-top: 10px;
-	margin-bottom: 18px;
+	margin-bottom: 10px;
 }
 dl {
 	margin-top: 1.41em;
@@ -320,7 +314,6 @@ input[type="url"],
 input[type="email"] {
 	padding: 5px;
 	max-width: 221px;
-	width: 100%;
 	border-radius: 2px;
 	background: #ededed;
 	margin: 3px 0 8px;
@@ -530,9 +523,6 @@ a.best-custom-img-header {
 /*------------End-Logotip----------------*/
 /*------------Nav-Menu-Header------------------*/
 .best-main-navigation {
-    -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.63);
-    -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.63);
-    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.63);
 	line-height: 15px;
     margin: 0 auto;
     width: 100%;
@@ -807,10 +797,9 @@ input.alignright {
 .size-full,
 .alignnone,
 .attachment-654x99999 {
-	border-radius: 5px;
 	z-index: 1;
-	max-width: auto !important;
 	height: auto;
+    margin: 5px;
 }
 .alignleft {
 	float: left;
@@ -1140,8 +1129,6 @@ a.comment-edit-link:hover {
 .best-p-post-data a {
 	text-decoration: none;
 }
-
-
 .best-footer-sidebar-content .best-witget-right-sidebar {
 	margin: 32px 10px 51px 0;
 	color: #ddd;
@@ -1184,10 +1171,7 @@ a.comment-edit-link:hover {
 /*--------------Footer-Sidebar------------------------*/
 .best-footer-sidebar-content .best-witget-right-sidebar,
 .best-witget-footer-sidebar {
-	color: #ddd;
 	float: left;
-	width: 23%;
-	padding: 30px 1% 15px;
 }
 .best-witget-footer-sidebar a {
 	color: #fff;
@@ -1431,7 +1415,6 @@ input[type="submit"] {
 	text-align: center;
 	font-family: 'montserratbold';
 	font-size: 16px;
-	text-transform: uppercase;
 }
 input[type="reset"]:hover,
 input[type="button"]:hover,
@@ -1541,17 +1524,10 @@ caption {
 	width: 100%;
 }
 #best_footer_sidebar {
-	display: block;
-	background-color: #35383b;
-	width: 100%;
+    float: left;
 }
 .best-footer-sidebar-content {
-	display: block;
-	width: 100%;
-	max-width: 1188px;
-	padding: 0 24px;
 	margin: 0 auto;
-	position: relative;
 }
 .best-footer-logo {
 	background-color: #2a2d2f;
@@ -1675,11 +1651,6 @@ input.dnt_paypal_button {
 		padding: 0 auto;
 	}
 	fieldset,
-	#best_footer_sidebar {
-		width: auto;
-		margin: 0 auto;
-		padding: 0 auto;
-	}
 	.best-main-navigation div ul ul li:hover ul,
 	.best-main-navigation div ul ul ul ul li:hover ul,
 	.best-main-navigation div ul ul ul ul ul ul li:hover ul,
@@ -1727,12 +1698,7 @@ input.dnt_paypal_button {
 	.best-witget-right-sidebar {
 		margin: 30px 0;
 	}
-	.footer,
-	.best-footer-sidebar-content {
-		width: auto;
-		padding: 0 auto;
-	}
-	.best-footer-logo-content {
+	.footer {
 		width: auto;
 	}
 }
@@ -1828,9 +1794,7 @@ input.dnt_paypal_button {
     .best-witget-right-sidebar,
     .best-witget-footer-sidebar,
     .menu-menu-footer {
-        width: 100%;
         margin: 0 auto;
-        padding: 0 1.5% !important;
         float: left;
     }
     .best-witget-right-sidebar,
@@ -1838,11 +1802,17 @@ input.dnt_paypal_button {
         padding-bottom: 18px !important;
         margin-bottom: 10px !important;
     }
-    .best-footer-sidebar-content {
-        padding: 20px !important;
-    }
 }
 @media screen and (max-width: 768px) {
+    #best_footer_sidebar {
+        float: right;
+    }
+    #fa-footer-container {
+        width: 100%;
+    }
+    .best-footer-extra {
+        margin: 26px 0 0 15px!important;
+    }
 	#best_header {
 		width: auto;
 	}
@@ -1885,30 +1855,10 @@ input.dnt_paypal_button {
 		padding: 0;
 	}
 }
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 480px) {
     .best-footer-extra {
-        float: none!important;
         margin: 0!important;
     }
-	.best-custom-file-status {
-		width: 100%;
-	}
-	.best-footer-logo-content-home,
-	.best-footer-logo-content-by,
-	.menu-menu-footer,
-	.best-witget-footer-sidebar ul {
-		float: none;
-	}
-	.best-footer-logo-content-home {
-		margin-top: 0;
-		padding-top: 20px;
-	}
-	.best-footer-logo-content-by {
-		margin-bottom: 0;
-		padding-bottom: 20px;
-	}
-}
-@media screen and (max-width: 480px) {
 	html {
 		-webkit-text-size-adjust: none;
 	}
@@ -1926,12 +1876,6 @@ input.dnt_paypal_button {
 	.best-image-nav-next,
 	.best-image-nav-prev {
 		margin: 18px 0;
-	}
-	.best-footer-sidebar-content .best-witget-right-sidebar,
-	.best-witget-right-sidebar,
-	.best-witget-footer-sidebar {
-		max-width: 480px;
-		width: 100%;
 	}
 	.sub-menu {
 		width: auto;
@@ -1980,7 +1924,6 @@ input.dnt_paypal_button {
 /* Accordion Styles */
 .accordion {
     margin-bottom: 20px;
-    background: rgb(242, 242, 242);
 }
 .accordion-title {
     background: #D5B200;
@@ -2039,14 +1982,33 @@ input.dnt_paypal_button {
     color: #F29333;
 }
 
-.best-footer-logo-content-by .fa {
+.best-footer-extra {
+    margin: 25px 50px;
+    float: left;
+}
+
+.wpcf7-form p {
+    font-size: 13px;
+}
+
+.newsletter-email {
+    /*TODO: set the width to be wider */
+    width: 500px;
+}
+.newsletter-submit {
+    margin-left: 5px;
+    padding: 6px!important;
+}
+
+#fa-footer-container .fa {
     color: #D5B200;
 }
-.best-footer-logo-content-by .fa:hover {
+
+#fa-footer-container .fa:hover {
     cursor: pointer;
 }
 
-.best-footer-logo-content-by .fa-inverse {
+#fa-footer-container .fa-inverse {
     color: #2A2D2F;
     -o-transition: color 0.2s ease-out;
     -ms-transition: color 0.2s ease-out;
@@ -2055,15 +2017,6 @@ input.dnt_paypal_button {
     transition: color 0.2s ease-out;
 }
 
-.best-footer-logo-content-by a:hover .fa-inverse {
+#fa-footer-container a:hover .fa-inverse {
     color: #F6F6F6;
-}
-
-.best-footer-extra {
-    margin: 25px 50px;
-    float: left;
-}
-
-.wpcf7-form p {
-    font-size: 13px;
 }
